; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-udp-multicast-join.c_do_send.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-udp-multicast-join.c_do_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"PING\00", align 1
@MULTICAST_ADDR = common dso_local global i32 0, align 4
@TEST_PORT = common dso_local global i32 0, align 4
@client = common dso_local global i32 0, align 4
@sv_send_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @do_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_send(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_in, align 4
  store i32* %0, i32** %2, align 8
  %5 = call i32 @uv_buf_init(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @MULTICAST_ADDR, align 4
  %7 = load i32, i32* @TEST_PORT, align 4
  %8 = call i64 @uv_ip4_addr(i32 %6, i32 %7, %struct.sockaddr_in* %4)
  %9 = icmp eq i64 0, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = bitcast %struct.sockaddr_in* %4 to %struct.sockaddr*
  %14 = load i32, i32* @sv_send_cb, align 4
  %15 = call i32 @uv_udp_send(i32* %12, i32* @client, i32* %3, i32 1, %struct.sockaddr* %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @uv_buf_init(i8*, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_ip4_addr(i32, i32, %struct.sockaddr_in*) #1

declare dso_local i32 @uv_udp_send(i32*, i32*, i32*, i32, %struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
